manifests/workloads/tekton/dashboard/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tekton-auth
spec:
  basicAuth:
    removeHeader: true
    secret: tekton-authsecret
