manifests/workloads/tekton/dashboard/read-only.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekton-dashboard-readonly
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard-readonly
    app.kubernetes.io/version: v0.28.0
    dashboard.tekton.dev/release: v0.28.0
    version: v0.28.0
  name: tekton-dashboard-readonly
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: default
      app.kubernetes.io/name: dashboard
      app.kubernetes.io/part-of: tekton-dashboard-readonly
  template:
    metadata:
      labels:
        app: tekton-dashboard
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: default
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/part-of: tekton-dashboard-readonly
        app.kubernetes.io/version: v0.28.0
      name: tekton-dashboard-readonly
    spec:
      containers:
        - args:
            - --port=9097
            - --logout-url=
            - --pipelines-namespace=tekton-pipelines
            - --triggers-namespace=tekton-pipelines
            - --read-only=true
            - --log-level=info
            - --log-format=json
            - --namespace=
            - --stream-logs=true
            - --external-logs=
          image: gcr.io/tekton-releases/github.com/tektoncd/dashboard/cmd/dashboard:v0.28.0@sha256:5ac6044647175e9bb2b0beed19fd34353bb18156faab70d0a789a2b0a7ba8092
          livenessProbe:
            httpGet:
              path: /health
              port: 9097
          name: tekton-dashboard-readonly
          ports:
            - containerPort: 9097
          readinessProbe:
            httpGet:
              path: /readiness
              port: 9097
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      serviceAccountName: tekton-dashboard-readonly
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-dashboard-readonly
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard-readonly
    app.kubernetes.io/version: v0.28.0
    dashboard.tekton.dev/release: v0.28.0
    version: v0.28.0
  name: tekton-dashboard-readonly
  namespace: tekton-pipelines
spec:
  ports:
    - name: http
      port: 9097
      protocol: TCP
      targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard-readonly
