manifests/workloads/tekton/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tekton.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: tekton
spec:
  type: ExternalName
  externalName: traefik.homelab.danmanners.com
  sessionAffinity: None
