manifests/workloads/tekton/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-kube-cluster
  namespace: homelab-kube-cluster
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: tekton-authsecret
    nginx.ingress.kubernetes.io/auth-realm: 'Tekton Dashboard - Authentication Required'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tekton.homelab.danmanners.com
  rules:
  - host: tekton.homelab.danmanners.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
